Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 6.2.0 Beta2
-
Fix Version/s: 6.2.0 Beta3, 6.3.0 Alpha
-
Component/s: Quick: Controls 2
-
Labels:None
-
Commits:35f948a1add8a46d85c6383971e9ebff3e0dada7 (qt/qtdeclarative/dev) e7204f4658f6dee169481657ccda17c115ab2c7c (qt/qtdeclarative/6.2)
Description
When dragging on bottom-right handle, the current selection is removed / snaps to only one cell if the handles share the same delegate